--- a/newiii.html
+++ b/newiii.html
@@ -6,8 +6,7 @@ const express = require("express");
 const app = express();
 const mongoose = require("mongoose");
 const Listing = require("./models/listing");
-// const MONGO_URL = "mongodb://127.0.0.1:27017/marriagecard";
-const db_url = process.env.ATLASDB_URL;
+const MONGO_URL = "mongodb://127.0.0.1:27017/marriagecard";
 const path = require("path");
 const methodOverride = require("method-override");
 const ejsMate = require("ejs-mate");
@@ -17,7 +16,6 @@ const User = require("./models/user");
 const wrapAsync = require("./utlis/wrapAsync");
 const expressError = require("./utlis/expressError");
 const session = require("express-session");
-const MongoStore = require("connect-mongo");
 const flash = require("connect-flash");
 const Booking = require("./models/booking");
 const {
@@ -50,12 +48,8 @@ main()
     console.log(err);
   });
 
-// async function main() {
-//   await mongoose.connect(MONGO_URL);
-// }
-
 async function main() {
-  await mongoose.connect(db_url);
+  await mongoose.connect(MONGO_URL);
 }
 
 app.engine("ejs", ejsMate);
@@ -66,19 +60,7 @@ app.use(express.static(path.join(__dirname, "public")));
 
 app.use(methodOverride("_method"));
 
-const store = MongoStore.create({
-  mongoUrl: db_url,
-  crypto: {
-    secret: "thisisnotagoodsecret",
-  },
-  touchAfter: 24 * 60 * 60,
-});
-store.on("error", () => {
-  console.log("error occured in db", err);
-});
-
 const sessionOptions = {
-  store,
   secret: "thisisnotagoodsecret",
   resave: false,
   saveUninitialized: true,
